# mev_relay

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: default.toml  development.toml  example.toml  production.toml  test.toml
docs/: missed_block_logging.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: mev_relay.json
src/: lib.rs  main.rs
src/events/: domain.rs  filter.rs  mod.rs  normalizer.rs  parser.rs  protocol.rs  repository.rs
src/infrastructure/: app.rs  config.rs  health.rs  logging.rs  metrics.rs  mod.rs  shutdown.rs
src/messaging/: buffer.rs  buffered_processor.rs  domain.rs  mod.rs  publisher.rs  redis.rs  subscriber.rs
src/monitoring/: domain.rs  flashbots.rs  mempool.rs  missed_block_logger.rs  mod.rs  service.rs  subgraph.rs
src/monitoring/subgraph/: queries.graphql  schema.json
src/shared/: config.rs  constants.rs  error.rs  mod.rs  types.rs  utils.rs
tests/: README.md  integration.rs  integration_tests.rs  missed_block_logging.rs  mod.rs  redis_buffer_integration.rs  subgraph_integration.rs  test_helpers.rs  testcontainers.rs  testcontainers_integration.rs
