[package]
name = "mev_relay"
version = "0.1.0"
edition = "2021"
authors = ["MEV Relay Team"]
description = "High-performance MEV relay monitoring mempool and flashbots for real-time swap events"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pwmpw/mev_relay"
keywords = ["mev", "relay", "ethereum", "flashbots", "mempool", "redis"]
categories = ["blockchain", "network-programming", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuration
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

# Additional utilities
hex = "0.4"
sysinfo = "0.30"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for RPC calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"

# Web3 and Ethereum
web3 = "0.19"
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Async streams and channels
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Signal handling
tokio-signal = "0.1"

# Serialization
bincode = "2.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["redis", "postgres"] }

[[bin]]
name = "mev_relay"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true 